crates/loxide_parser/src/snapshots/parser/snapshots-outputs/loxide_parser__parser__tests__factor.snap
---
source: crates/loxide_parser/src/parser.rs
expression: asts
---
[
    Ok(
        Expr {
            kind: Binary(
                BinaryExpr {
                    lhs: Expr {
                        kind: Binary(
                            BinaryExpr {
                                lhs: Expr {
                                    kind: Literal(
                                        Number(
                                            2.0,
                                        ),
                                    ),
                                },
                                rhs: Expr {
                                    kind: Literal(
                                        Number(
                                            3.0,
                                        ),
                                    ),
                                },
                                operator: Star,
                            },
                        ),
                    },
                    rhs: Expr {
                        kind: Literal(
                            Number(
                                6.0,
                            ),
                        ),
                    },
                    operator: Slash,
                },
            ),
        },
    ),
]
